--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ Django==1.10.5
 django-cors-middleware==1.3.1
 django-extensions==1.7.1
 djangorestframework==3.4.4
+django-basic-auth-ip-whitelist==0.3.3
 PyJWT==1.4.2
 six==1.10.0
